--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <string name="room_number">Nombre de chambres :</string>
     <string name="contact">Contact :</string>
+    <string name="real_estate_app">Real Estate App</string>
 
 
 </resources>
